aside, header, footer appliocation.html.erb 파일로 뺌

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,9 +42,18 @@
 	  gtag('config', 'UA-217278797-1');
 	</script>	
   </head>
-
-  <%= yield %>
-
+  <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled toolbar-fixed aside-enabled aside-fixed" style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px">	
+	<div class="d-flex flex-column flex-root">
+		<div class="page d-flex flex-row flex-column-fluid">
+  			<%= render "layouts/aside"%>
+			<div class="wrapper d-flex flex-column flex-row-fluid" id="kt_wrapper">
+				<%= render "layouts/header"%>
+				<%= yield %>
+				<%= render "layouts/footer"%>
+			</div>
+		</div>
+	</div>
+  </body>
 </html>
 
 
