--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,17 +1,15 @@
 
-	<body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled toolbar-fixed aside-enabled aside-fixed" style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px">	
+	<body>	
 		<!--begin::Main-->
 		<!--begin::Root-->
-		<div class="d-flex flex-column flex-root">
+		<div>
 			<!--begin::Page-->
-			<div class="page d-flex flex-row flex-column-fluid">
+			<div>
 				<!--begin::Aside-->
-				<%= render "layouts/aside"%>
 				<!--end::Aside-->
 				<!--begin::Wrapper-->
-				<div class="wrapper d-flex flex-column flex-row-fluid" id="kt_wrapper">
+				<div>
 					<!--begin::Header-->
-					<%= render "layouts/header"%>
 					<!--end::Header-->
 					
 					
@@ -594,7 +592,6 @@
 					</div>
 					<!--end::Content-->
 					<!--begin::Footer-->
-					<%= render "layouts/footer"%>
 					<!--end::Footer-->
 				</div>
 				<!--end::Wrapper-->
