--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
 							<!--begin::Mobile logo-->
 							<div class="d-flex align-items-center flex-grow-1 flex-lg-grow-0">
 								<a href="../../demo4/dist/index.html" class="d-lg-none">
-									<img alt="Logo" src="assets/media/logos/logo-demo4-mobile.svg" class="h-30px" />
+									<img alt="Logo" src="<%= asset_path('logos/150-24.jpg') %>" class="h-30px" />
 								</a> 
 							</div>
 							<!--end::Mobile logo-->
@@ -293,7 +293,7 @@
 																<a href="#" class="d-flex text-dark text-hover-primary align-items-center mb-5">
 																	<!--begin::Symbol-->
 																	<div class="symbol symbol-40px me-4">
-																		<img src="assets/media/avatars/150-1.jpg" alt="" />
+																		<img src="<%= asset_path('avatars/150-1.jpg') %>" alt="" />
 																	</div>
 																	<!--end::Symbol-->
 																	<!--begin::Title-->
@@ -308,7 +308,7 @@
 																<a href="#" class="d-flex text-dark text-hover-primary align-items-center mb-5">
 																	<!--begin::Symbol-->
 																	<div class="symbol symbol-40px me-4">
-																		<img src="assets/media/avatars/150-3.jpg" alt="" />
+																		<img src="<%= asset_path('avatars/150-13.jpg') %>" alt="" />
 																	</div>
 																	<!--end::Symbol-->
 																	<!--begin::Title-->
@@ -323,7 +323,7 @@
 																<a href="#" class="d-flex text-dark text-hover-primary align-items-center mb-5">
 																	<!--begin::Symbol-->
 																	<div class="symbol symbol-40px me-4">
-																		<img src="assets/media/avatars/150-8.jpg" alt="" />
+																		<img src="<%= asset_path('avatars/150-8.jpg') %>" alt="" />
 																	</div>
 																	<!--end::Symbol-->
 																	<!--begin::Title-->
@@ -338,7 +338,7 @@
 																<a href="#" class="d-flex text-dark text-hover-primary align-items-center mb-5">
 																	<!--begin::Symbol-->
 																	<div class="symbol symbol-40px me-4">
-																		<img src="assets/media/avatars/150-11.jpg" alt="" />
+																		<img src="<%= asset_path('avatars/150-11.jpg') %>" alt="" />
 																	</div>
 																	<!--end::Symbol-->
 																	<!--begin::Title-->
@@ -353,7 +353,7 @@
 																<a href="#" class="d-flex text-dark text-hover-primary align-items-center mb-5">
 																	<!--begin::Symbol-->
 																	<div class="symbol symbol-40px me-4">
-																		<img src="assets/media/avatars/150-12.jpg" alt="" />
+																		<img src="<%= asset_path('avatars/150-12.jpg') %>" alt="" />
 																	</div>
 																	<!--end::Symbol-->
 																	<!--begin::Title-->
@@ -372,7 +372,7 @@
 																	<!--begin::Symbol-->
 																	<div class="symbol symbol-40px me-4">
 																		<span class="symbol-label bg-light">
-																			<img class="w-20px h-20px" src="assets/media/svg/brand-logos/volicity-9.svg" alt="" />
+																			<img src="<%= asset_path('svg/brand-logos/volicity-9.svg') %>" alt="" />
 																		</span>
 																	</div>
 																	<!--end::Symbol-->
@@ -389,7 +389,7 @@
 																	<!--begin::Symbol-->
 																	<div class="symbol symbol-40px me-4">
 																		<span class="symbol-label bg-light">
-																			<img class="w-20px h-20px" src="assets/media/svg/brand-logos/tvit.svg" alt="" />
+																			<img src="<%= asset_path('svg/brand-logos/tvit.svg') %>" alt="" />
 																		</span>
 																	</div>
 																	<!--end::Symbol-->
@@ -406,7 +406,7 @@
 																	<!--begin::Symbol-->
 																	<div class="symbol symbol-40px me-4">
 																		<span class="symbol-label bg-light">
-																			<img class="w-20px h-20px" src="assets/media/svg/misc/infography.svg" alt="" />
+																			<img src="<%= asset_path('svg/misc/infography.svg') %>" alt="" />
 																		</span>
 																	</div>
 																	<!--end::Symbol-->
@@ -423,7 +423,7 @@
 																	<!--begin::Symbol-->
 																	<div class="symbol symbol-40px me-4">
 																		<span class="symbol-label bg-light">
-																			<img class="w-20px h-20px" src="assets/media/svg/brand-logos/leaf.svg" alt="" />
+																			<img src="<%= asset_path('svg/brand-logos/leaf.svg') %>" alt="" />
 																		</span>
 																	</div>
 																	<!--end::Symbol-->
@@ -440,7 +440,7 @@
 																	<!--begin::Symbol-->
 																	<div class="symbol symbol-40px me-4">
 																		<span class="symbol-label bg-light">
-																			<img class="w-20px h-20px" src="assets/media/svg/brand-logos/tower.svg" alt="" />
+																			<img src="<%= asset_path('svg/brand-logos/tower.svg') %>" alt="" />
 																		</span>
 																	</div>
 																	<!--end::Symbol-->
@@ -966,7 +966,8 @@
 											<!--begin::Menu-->
 											<div class="menu menu-sub menu-sub-dropdown menu-column w-350px w-lg-375px" data-kt-menu="true">
 												<!--begin::Heading-->
-												<div class="d-flex flex-column bgi-no-repeat rounded-top" style="background-image:url('assets/media/misc/header-bg-demo4.png')">
+												<img src="<%= asset_path('svg/misc/infography.svg') %>" alt="" />
+												<div class="d-flex flex-column bgi-no-repeat rounded-top" style="background-image:url(<%= asset_path('misc/header-bg-demo4.png')%>)">
 													<!--begin::Title-->
 													<h3 class="text-white fw-bold px-9 mt-10 mb-6">Notifications
 													<span class="fs-8 opacity-75 ps-3">24 reports</span></h3>
@@ -1250,7 +1251,7 @@
 															<!--end::Section-->
 															<!--begin::Illustration-->
 															<div class="text-center px-4">
-																<img class="mw-100 mh-200px" alt="image" src="assets/media/illustrations/dozzy-1/1.png" />
+																<img class="mw-100 mh-200px" alt="image" src="<%= asset_path('illustrations/dozzy-1/1.png')%>" />
 															</div>
 															<!--end::Illustration-->
 														</div>
@@ -1525,7 +1526,7 @@
 											<!--begin::Menu-->
 											<div class="menu menu-sub menu-sub-dropdown menu-column w-250px w-lg-325px" data-kt-menu="true">
 												<!--begin::Heading-->
-												<div class="d-flex flex-column flex-center bgi-no-repeat rounded-top px-9 py-10" style="background-image:url('assets/media/misc/header-bg-demo4.png')">
+												<div class="d-flex flex-column flex-center bgi-no-repeat rounded-top px-9 py-10" style="background-image:url(<%= asset_path('misc/header-bg-demo4.png')%>)">
 													<!--begin::Title-->
 													<h3 class="text-white fw-bold mb-3">Quick Links</h3>
 													<!--end::Title-->
@@ -1624,7 +1625,7 @@
 										<div class="d-flex align-items-center ms-1 ms-lg-3" id="kt_header_user_menu_toggle">
 											<!--begin::Menu wrapper-->
 											<div class="cursor-pointer symbol symbol-30px symbol-md-40px" data-kt-menu-trigger="click" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end">
-												<img src="assets/media/avatars/150-26.jpg" alt="user" />
+												<img src="<%= asset_path('avatars/150-26.jpg') %>" alt="" />
 											</div>
 											<!--begin::Menu-->
 											<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-800 menu-state-bg menu-state-primary fw-bold py-4 fs-6 w-275px" data-kt-menu="true">
@@ -1633,7 +1634,7 @@
 													<div class="menu-content d-flex align-items-center px-3">
 														<!--begin::Avatar-->
 														<div class="symbol symbol-50px me-5">
-															<img alt="Logo" src="assets/media/avatars/150-26.jpg" />
+															<img src="<%= asset_path('avatars/150-11.jpg') %>" alt="" />
 														</div>
 														<!--end::Avatar-->
 														<!--begin::Username-->
@@ -1743,7 +1744,7 @@
 													<a href="#" class="menu-link px-5">
 														<span class="menu-title position-relative">Language
 														<span class="fs-8 rounded bg-light px-3 py-2 position-absolute translate-middle-y top-50 end-0">English
-														<img class="w-15px h-15px rounded-1 ms-2" src="assets/media/flags/united-states.svg" alt="" /></span></span>
+														<img class="w-15px h-15px rounded-1 ms-2" src="<%= asset_path('flags/united-states.svg')%>" alt="" /></span></span>
 													</a>
 													<!--begin::Menu sub-->
 													<div class="menu-sub menu-sub-dropdown w-175px py-4">
@@ -1751,7 +1752,7 @@
 														<div class="menu-item px-3">
 															<a href="../../demo4/dist/account/settings.html" class="menu-link d-flex px-5 active">
 															<span class="symbol symbol-20px me-4">
-																<img class="rounded-1" src="assets/media/flags/united-states.svg" alt="" />
+																<img class="rounded-1" src="<%= asset_path('flags/united-states.svg')%>" alt="" />
 															</span>English</a>
 														</div>
 														<!--end::Menu item-->
@@ -1759,7 +1760,7 @@
 														<div class="menu-item px-3">
 															<a href="../../demo4/dist/account/settings.html" class="menu-link d-flex px-5">
 															<span class="symbol symbol-20px me-4">
-																<img class="rounded-1" src="assets/media/flags/spain.svg" alt="" />
+																<img class="rounded-1" src="<%= asset_path('flags/spain.svg')%>" alt="" />
 															</span>Spanish</a>
 														</div>
 														<!--end::Menu item-->
@@ -1767,7 +1768,7 @@
 														<div class="menu-item px-3">
 															<a href="../../demo4/dist/account/settings.html" class="menu-link d-flex px-5">
 															<span class="symbol symbol-20px me-4">
-																<img class="rounded-1" src="assets/media/flags/germany.svg" alt="" />
+																<img class="rounded-1" src="<%= asset_path('flags/germany.svg')%>" alt="" />
 															</span>German</a>
 														</div>
 														<!--end::Menu item-->
@@ -1775,7 +1776,7 @@
 														<div class="menu-item px-3">
 															<a href="../../demo4/dist/account/settings.html" class="menu-link d-flex px-5">
 															<span class="symbol symbol-20px me-4">
-																<img class="rounded-1" src="assets/media/flags/japan.svg" alt="" />
+																<img class="rounded-1" src="<%= asset_path('flags/japan.svg')%>" alt="" />
 															</span>Japanese</a>
 														</div>
 														<!--end::Menu item-->
@@ -1783,7 +1784,7 @@
 														<div class="menu-item px-3">
 															<a href="../../demo4/dist/account/settings.html" class="menu-link d-flex px-5">
 															<span class="symbol symbol-20px me-4">
-																<img class="rounded-1" src="assets/media/flags/france.svg" alt="" />
+																<img class="rounded-1" src="<%= asset_path('flags/france.svg')%>" alt="" />
 															</span>French</a>
 														</div>
 														<!--end::Menu item-->
