일단은 js를 포함하지 않아 제대로 잘 돌아가는 것을 확인 할 수 있음. scripts.bundle.js 파일에 확실하게 문제가 있는 것은 맞습니다

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,6 +71,14 @@
 			</div>
 		</div>
 	</div>
+	<script>var hostUrl = "assets/";</script>
+		<!--begin::Javascript-->
+		<!--begin::Global Javascript Bundle(used by all pages)-->
+		<script src="/assets/plugins.bundle.js"></script>
+		<!--end::Global Javascript Bundle-->
+		<!--begin::Page Vendors Javascript(used by this page)-->
+		<!--end::Page Vendors Javascript-->
+		<!--begin::Page Custom Javascript(used by this page)-->
   </body>
 </html>
 
