--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -55,14 +55,15 @@
 
 											<!--begin::Add user-->
 											<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#kt_modal_add_user">
-											<!--begin::Svg Icon | path: icons/duotune/arrows/arr075.svg-->
-											<span class="svg-icon svg-icon-2">
-												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-													<rect opacity="0.5" x="11.364" y="20.364" width="16" height="2" rx="1" transform="rotate(-90 11.364 20.364)" fill="black"></rect>
-													<rect x="4.36396" y="11.364" width="16" height="2" rx="1" fill="black"></rect>
-												</svg>
-											</span>
-											<!--end::Svg Icon-->Add User</button>
+												<!--begin::Svg Icon | path: icons/duotune/arrows/arr075.svg-->
+												<span class="svg-icon svg-icon-2">
+													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+														<rect opacity="0.5" x="11.364" y="20.364" width="16" height="2" rx="1" transform="rotate(-90 11.364 20.364)" fill="black"></rect>
+														<rect x="4.36396" y="11.364" width="16" height="2" rx="1" fill="black"></rect>
+													</svg>
+												</span>
+												<!--end::Svg Icon-->
+											Add User</button>
 											<!--end::Add user-->
 
 										</div>
@@ -804,6 +805,7 @@
 												</thead>
 												<!--end::Table head-->
 												<!--begin::Table body-->
+												<%# TODO:: 데이터를 연결해서 하나씩 가져오는 부분을 만들어야 합니다 %>
 												<tbody class="text-gray-600 fw-bold">
 													
 													<tr class="odd">
@@ -819,26 +821,29 @@
 															<!--begin:: Avatar -->
 														
 															<!--end::Avatar-->
-
+															<%# TODO:: User.avatar 가져오기 %>
 															<div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
 																<a href="../../demo4/dist/admin_user_users_view.html">
 																	<div class="symbol-label fs-3 bg-light-danger text-danger">G</div>
 																</a>
 															</div>
 
-
 															<!--begin::User details-->
 															<div class="d-flex flex-column">
-																<a href="../../demo4/dist/admin_user_users_admin.html" class="text-gray-800 text-hover-primary mb-1">Gilvert</a>
+																<%# TODO:: user 자체를 한번에 보내고, detail 에서 role 을 확인한 후 랜더링할 페이지 UI를 다르게 합니다 %>
+																<a href="/users/user-detail/1" class="text-gray-800 text-hover-primary mb-1">Gilvert</a>
+																<%# TODO:: User.email %>
 																<span>e.smith@kpmg.com.au</span>
 															</div>
 															<!--begin::User details-->
 														</td>
 														<!--end::User=-->
 														<!--begin::Role=-->
+														<%# TODO:: User.role %>
 														<td>Admin</td>
 														<!--end::Role=-->
 														<!--begin::Last login=-->
+														<%# TODO:: User.last_login %>
 														<td data-order="2022-06-16T17:36:25+09:00">
 															<div class="badge badge-light fw-bolder">Yesterday</div>
 														</td>
@@ -858,7 +863,8 @@
 															</a>
 															<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
 																<div class="menu-item px-3">
-																	<a href="../../demo4/dist/apps/user-management/users/view.html" class="menu-link px-3">Edit</a>
+																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
+																	<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
 																</div>
 																<div class="menu-item px-3">
 																	<a href="#" class="menu-link px-3" data-kt-users-table-filter="delete_row">Delete</a>
@@ -880,8 +886,9 @@
 														<!--begin::User=-->
 														<td class="d-flex align-items-center">
 															<!--begin:: Avatar -->
-															<div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
-																<a href="../../demo4/dist/apps/user-management/users/view.html">
+															<div class="symbol symbol-circle">
+															<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
+																<a href="/users/user-detail/1">
 																	<div class="symbol-label">
 																		<img src="assets/media/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
 																	</div>
@@ -924,7 +931,8 @@
 															<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
 																<!--begin::Menu item-->
 																<div class="menu-item px-3">
-																	<a href="../../demo4/dist/apps/user-management/users/view.html" class="menu-link px-3">Edit</a>
+																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
+																	<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
 																</div>
 																<!--end::Menu item-->
 																<!--begin::Menu item-->
@@ -950,8 +958,9 @@
 														<!--begin::User=-->
 														<td class="d-flex align-items-center">
 															<!--begin:: Avatar -->
-															<div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
-																<a href="../../demo4/dist/apps/user-management/users/view.html">
+															<div class="symbol symbol-circle">
+															<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
+																<a href="/users/user-detail/1">
 																	<div class="symbol-label">
 																		<img src="assets/media/ysmeta/img_student.jpeg" alt="Emma Smith" class="w-100">
 																	</div>
@@ -997,7 +1006,8 @@
 															<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
 																<!--begin::Menu item-->
 																<div class="menu-item px-3">
-																	<a href="../../demo4/dist/apps/user-management/users/view.html" class="menu-link px-3">Edit</a>
+																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
+																	<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
 																</div>
 																<!--end::Menu item-->
 																<!--begin::Menu item-->
@@ -1023,8 +1033,9 @@
 														<!--begin::User=-->
 														<td class="d-flex align-items-center">
 															<!--begin:: Avatar -->
-															<div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
-																<a href="../../demo4/dist/apps/user-management/users/view.html">
+															<div class="symbol symbol-circle">
+															<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
+																<a href="/users/user-detail/1">
 																	<div class="symbol-label">
 																		<img src="assets/media/ysmeta/img_teacher.jpeg" alt="Max Smith" class="w-100">
 																	</div>
@@ -1065,7 +1076,8 @@
 															<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
 																<!--begin::Menu item-->
 																<div class="menu-item px-3">
-																	<a href="../../demo4/dist/apps/user-management/users/view.html" class="menu-link px-3">Edit</a>
+																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
+																	<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
 																</div>
 																<!--end::Menu item-->
 																<!--begin::Menu item-->
@@ -1322,8 +1334,9 @@
 																<!--begin::User=-->
 																<td class="d-flex align-items-center">
 																	<!--begin:: Avatar -->
-																	<div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
-																		<a href="../../demo4/dist/apps/user-management/users/view.html">
+																	<div class="symbol symbol-circle">
+																	<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
+																		<a href="/users/user-detail/1">
 																			<div class="symbol-label fs-3 bg-light-success text-success">ㅈ</div>
 																		</a>
 																	</div>
@@ -1331,7 +1344,8 @@
 
 																	<!--begin::User details-->
 																	<div class="d-flex flex-column">
-																		<a href="../../demo4/dist/apps/user-management/users/view.html" class="text-gray-800 text-hover-primary mb-1">조해수</a>
+																	<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
+																		<a href="/users/user-detail/1" class="text-gray-800 text-hover-primary mb-1">조해수</a>
 																		<span class="fs-8">gilvert@gmail.com</span>
 																	</div>
 																	<!--begin::User details-->
@@ -1810,8 +1824,9 @@
 															<!--begin::User=-->
 															<td class="d-flex align-items-center">
 																<!--begin:: Avatar -->
-																<div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
-																	<a href="../../demo4/dist/apps/user-management/users/view.html">
+																<div class="symbol symbol-circle">
+																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
+																	<a href="/users/user-detail/1">
 																		<div class="symbol-label">
 																			<img src="assets/media/ysmeta/img_student.jpeg" alt="Emma Smith" class="w-100">
 																		</div>
@@ -1820,7 +1835,8 @@
 																<!--end::Avatar-->
 																<!--begin::User details-->
 																<div class="d-flex flex-column">
-																	<a href="../../demo4/dist/apps/user-management/users/view.html" class="text-gray-800 text-hover-primary mb-1">Jr Anthony</a>
+																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
+																	<a href="/users/user-detail/1" class="text-gray-800 text-hover-primary mb-1">Jr Anthony</a>
 																	<span>youngsu.gil@gmail.com</span>
 																</div>
 																<!--begin::User details-->
@@ -1847,7 +1863,8 @@
 																<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
 																	<!--begin::Menu item-->
 																	<div class="menu-item px-3">
-																		<a href="../../demo4/dist/apps/user-management/users/view.html" class="menu-link px-3">Edit</a>
+																	<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
+																		<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
 																	</div>
 																	<!--end::Menu item-->
 																	<!--begin::Menu item-->
@@ -2300,8 +2317,9 @@
 															<!--begin::User=-->
 															<td class="d-flex align-items-center">
 																<!--begin:: Avatar -->
-																<div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
-																	<a href="../../demo4/dist/apps/user-management/users/view.html">
+																<div class="symbol symbol-circle">
+																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
+																	<a href="/users/user-detail/1">
 																		<div class="symbol-label">
 																			<img src="assets/media/ysmeta/img_teacher.jpeg" alt="Max Smith" class="w-100">
 																		</div>
@@ -2310,7 +2328,8 @@
 																<!--end::Avatar-->
 																<!--begin::User details-->
 																<div class="d-flex flex-column">
-																	<a href="../../demo4/dist/apps/user-management/users/view.html" class="text-gray-800 text-hover-primary mb-1">Dr. crazy Andrew</a>
+																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
+																	<a href="/users/user-detail/1" class="text-gray-800 text-hover-primary mb-1">Dr. crazy Andrew</a>
 																	<span>max@kt.com</span>
 																</div>
 																<!--begin::User details-->
@@ -2334,7 +2353,8 @@
 																<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
 																	<!--begin::Menu item-->
 																	<div class="menu-item px-3">
-																		<a href="../../demo4/dist/apps/user-management/users/view.html" class="menu-link px-3">Edit</a>
+																	<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
+																		<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
 																	</div>
 																	<!--end::Menu item-->
 																	<!--begin::Menu item-->
