--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -831,7 +831,7 @@
 															<!--begin::User details-->
 															<div class="d-flex flex-column">
 																<%# TODO:: user 자체를 한번에 보내고, detail 에서 role 을 확인한 후 랜더링할 페이지 UI를 다르게 합니다 %>
-																<a href="/users/user-detail/1" class="text-gray-800 text-hover-primary mb-1">Gilvert</a>
+																<a href="/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1">Gilvert</a>
 																<%# TODO:: User.email %>
 																<span>e.smith@kpmg.com.au</span>
 															</div>
@@ -864,7 +864,7 @@
 															<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
 																<div class="menu-item px-3">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																	<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
+																	<a href="/users/parent-detail/1" class="menu-link px-3">Edit</a>
 																</div>
 																<div class="menu-item px-3">
 																	<a href="#" class="menu-link px-3" data-kt-users-table-filter="delete_row">Delete</a>
@@ -888,7 +888,7 @@
 															<!--begin:: Avatar -->
 															<div class="symbol symbol-circle">
 															<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
-																<a href="/users/user-detail/1">
+																<a href="/users/parent-detail/1">
 																	<div class="symbol-label">
 																		<img src="assets/media/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
 																	</div>
@@ -932,7 +932,7 @@
 																<!--begin::Menu item-->
 																<div class="menu-item px-3">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																	<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
+																	<a href="/users/parent-detail/1" class="menu-link px-3">Edit</a>
 																</div>
 																<!--end::Menu item-->
 																<!--begin::Menu item-->
@@ -960,7 +960,7 @@
 															<!--begin:: Avatar -->
 															<div class="symbol symbol-circle">
 															<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
-																<a href="/users/user-detail/1">
+																<a href="/users/parent-detail/1">
 																	<div class="symbol-label">
 																		<img src="assets/media/ysmeta/img_student.jpeg" alt="Emma Smith" class="w-100">
 																	</div>
@@ -1007,7 +1007,7 @@
 																<!--begin::Menu item-->
 																<div class="menu-item px-3">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																	<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
+																	<a href="/users/parent-detail/1" class="menu-link px-3">Edit</a>
 																</div>
 																<!--end::Menu item-->
 																<!--begin::Menu item-->
@@ -1035,7 +1035,7 @@
 															<!--begin:: Avatar -->
 															<div class="symbol symbol-circle">
 															<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
-																<a href="/users/user-detail/1">
+																<a href="/users/parent-detail/1">
 																	<div class="symbol-label">
 																		<img src="assets/media/ysmeta/img_teacher.jpeg" alt="Max Smith" class="w-100">
 																	</div>
@@ -1077,7 +1077,7 @@
 																<!--begin::Menu item-->
 																<div class="menu-item px-3">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																	<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
+																	<a href="/users/parent-detail/1" class="menu-link px-3">Edit</a>
 																</div>
 																<!--end::Menu item-->
 																<!--begin::Menu item-->
@@ -1336,7 +1336,7 @@
 																	<!--begin:: Avatar -->
 																	<div class="symbol symbol-circle">
 																	<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
-																		<a href="/users/user-detail/1">
+																		<a href="/users/parent-detail/1">
 																			<div class="symbol-label fs-3 bg-light-success text-success">ㅈ</div>
 																		</a>
 																	</div>
@@ -1345,7 +1345,7 @@
 																	<!--begin::User details-->
 																	<div class="d-flex flex-column">
 																	<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																		<a href="/users/user-detail/1" class="text-gray-800 text-hover-primary mb-1">조해수</a>
+																		<a href="/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1">조해수</a>
 																		<span class="fs-8">gilvert@gmail.com</span>
 																	</div>
 																	<!--begin::User details-->
@@ -1826,7 +1826,7 @@
 																<!--begin:: Avatar -->
 																<div class="symbol symbol-circle">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
-																	<a href="/users/user-detail/1">
+																	<a href="/users/parent-detail/1">
 																		<div class="symbol-label">
 																			<img src="assets/media/ysmeta/img_student.jpeg" alt="Emma Smith" class="w-100">
 																		</div>
@@ -1836,7 +1836,7 @@
 																<!--begin::User details-->
 																<div class="d-flex flex-column">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																	<a href="/users/user-detail/1" class="text-gray-800 text-hover-primary mb-1">Jr Anthony</a>
+																	<a href="/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1">Jr Anthony</a>
 																	<span>youngsu.gil@gmail.com</span>
 																</div>
 																<!--begin::User details-->
@@ -1864,7 +1864,7 @@
 																	<!--begin::Menu item-->
 																	<div class="menu-item px-3">
 																	<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																		<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
+																		<a href="/users/parent-detail/1" class="menu-link px-3">Edit</a>
 																	</div>
 																	<!--end::Menu item-->
 																	<!--begin::Menu item-->
@@ -2319,7 +2319,7 @@
 																<!--begin:: Avatar -->
 																<div class="symbol symbol-circle">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
-																	<a href="/users/user-detail/1">
+																	<a href="/users/parent-detail/1">
 																		<div class="symbol-label">
 																			<img src="assets/media/ysmeta/img_teacher.jpeg" alt="Max Smith" class="w-100">
 																		</div>
@@ -2329,7 +2329,7 @@
 																<!--begin::User details-->
 																<div class="d-flex flex-column">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																	<a href="/users/user-detail/1" class="text-gray-800 text-hover-primary mb-1">Dr. crazy Andrew</a>
+																	<a href="/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1">Dr. crazy Andrew</a>
 																	<span>max@kt.com</span>
 																</div>
 																<!--begin::User details-->
@@ -2354,7 +2354,7 @@
 																	<!--begin::Menu item-->
 																	<div class="menu-item px-3">
 																	<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																		<a href="/users/user-detail/1" class="menu-link px-3">Edit</a>
+																		<a href="/users/parent-detail/1" class="menu-link px-3">Edit</a>
 																	</div>
 																	<!--end::Menu item-->
 																	<!--begin::Menu item-->
