--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,8 +45,8 @@
   <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled toolbar-fixed aside-enabled aside-fixed" style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px">	
 	<div class="d-flex flex-column flex-root">
 		<div class="page d-flex flex-row flex-column-fluid">
-  			<%= render "layouts/aside"%>
-			<div class="wrapper d-flex flex-column flex-row-fluid" id="kt_wrapper">
+  			
+			<div class="d-flex flex-column flex-row-fluid" id="kt_wrapper">
 				<%= render "layouts/header"%>
 				<% if notice %>
 					<p class="alert alert-success"><%= notice %></p>
