--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -197,7 +197,7 @@
 																	<!--begin::Image input-->
 																	<div class="image-input image-input-outline" data-kt-image-input="true" style="background-image: url(assets/media/avatars/blank.png)">
 																		<!--begin::Preview existing avatar-->
-																		<div class="image-input-wrapper w-125px h-125px" style="background-image: url(assets/media/avatars/150-1.jpg);"></div>
+																		<div class="image-input-wrapper w-125px h-125px" style="background-image: url(/images/avatars/150-1.jpg);"></div>
 																		<!--end::Preview existing avatar-->
 																		<!--begin::Label-->
 																		<label class="btn btn-icon btn-circle btn-active-color-primary w-25px h-25px bg-body shadow" data-kt-image-input-action="change" data-bs-toggle="tooltip" title="" data-bs-original-title="Change avatar">
@@ -891,7 +891,7 @@
 															<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
 																<a href="/users/parent-detail/1">
 																	<div class="symbol-label">
-																		<img src="assets/media/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
+																		<img src="images/ysmeta/img_parent.jpeg" alt="Sean Bean" class="w-100">
 																	</div>
 																</a>
 
@@ -963,7 +963,7 @@
 															<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
 																<a href="/users/parent-detail/1">
 																	<div class="symbol-label">
-																		<img src="assets/media/ysmeta/img_student.jpeg" alt="Emma Smith" class="w-100">
+																		<img src="images/ysmeta/img_student.jpeg" alt="Emma Smith" class="w-100">
 																	</div>
 																</a>
 															</div>
@@ -971,7 +971,7 @@
 															<!--begin::User details-->
 															<div class="d-flex flex-column">
                                                             <%# TODO:: user.image, user.name, user.email %>
-																<a href="/users/parent-detail/:id" class="text-gray-800 text-hover-primary mb-1">Jr Anthony</a>
+																<a href="/users/student-detail/1" class="text-gray-800 text-hover-primary mb-1">Jr Anthony</a>
 																<span>melody@altbox.com</span>
 															</div>
 
@@ -1008,7 +1008,7 @@
 																<!--begin::Menu item-->
 																<div class="menu-item px-3">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																	<a href="/users/parent-detail/1" class="menu-link px-3">Edit</a>
+																	<a href="/users/student-detail/1" class="menu-link px-3">Edit</a>
 																</div>
 																<!--end::Menu item-->
 																<!--begin::Menu item-->
@@ -1038,7 +1038,7 @@
 															<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
 																<a href="/users/parent-detail/1">
 																	<div class="symbol-label">
-																		<img src="assets/media/ysmeta/img_teacher.jpeg" alt="Max Smith" class="w-100">
+																		<img src="images/ysmeta/img_teacher.jpeg" alt="Max Smith" class="w-100">
 																	</div>
 																</a>
 															</div>
@@ -1364,12 +1364,12 @@
 																	<div class="symbol-group symbol-hover">
 																		<!--begin::User-->
 																		<div class="symbol symbol-20px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Emma Smith">
-																			<img alt="Pic" src="assets/media/avatars/150-1.jpg">
+																			<img alt="Pic" src="images/avatars/150-1.jpg">
 																		</div>
 																		<!--begin::User-->
 																		<!--begin::User-->
 																		<div class="symbol symbol-20px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Rudy Stone">
-																			<img alt="Pic" src="assets/media/avatars/150-2.jpg">
+																			<img alt="Pic" src="images/avatars/150-2.jpg">
 																		</div>
 																		<!--begin::User-->
 
@@ -1835,7 +1835,7 @@
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
 																	<a href="/users/parent-detail/1">
 																		<div class="symbol-label">
-																			<img src="assets/media/ysmeta/img_student.jpeg" alt="Emma Smith" class="w-100">
+																			<img src="images/ysmeta/img_student.jpeg" alt="Emma Smith" class="w-100">
 																		</div>
 																	</a>
 																</div>
@@ -2329,7 +2329,7 @@
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
 																	<a href="/users/parent-detail/1">
 																		<div class="symbol-label">
-																			<img src="assets/media/ysmeta/img_teacher.jpeg" alt="Max Smith" class="w-100">
+																			<img src="images/ysmeta/img_teacher.jpeg" alt="Max Smith" class="w-100">
 																		</div>
 																	</a>
 																</div>
