--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,38 +4,7 @@
   background: transparent;
 }
 </style>
-<div class="wrapper" style="width:90%; margin-left:auto; margin-right:auto;">
 
-  <h2>Sign up</h2>
-
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "Sign up" %>
-    </div>
-  <% end %>
-
-  <%= render "devise/shared/links" %>
-</div>
 
 	<body id="kt_body" class="bg-body">
 		<!--begin::Main-->
@@ -83,7 +52,7 @@
 								<div class="fv-row mb-7">
 									<label class="form-label fw-bolder text-dark fs-6">Full Name</label>
 									<%# <input class="form-control form-control-lg form-control-solid" type="text" placeholder="" name="full-name" autocomplete="off" /> %>
-                  <%= f.text_field :name, :label => 'First Name', required: true, autofocus: true , autocomplete: "name", :class => 'form-control form-control-lg form-control-solid' %>
+                  <%= f.text_field :name, required: true, autofocus: true , autocomplete: "name", :class => 'form-control form-control-lg form-control-solid' %>
 								</div>
 							</div>
 							<!--end::Input group-->
