margin top in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,8 @@
 					<p class="alert alert-danger"><%= alert %></p>
 				<% end %>
 
-				<p class="navbar-text float-right" style="margin-left:20px; margin-top:200px">
+				TODO:: 없애도 됩니다
+				<p class="navbar-text float-right" style="margin-left:20px; margin-top : 65px">
 					<% if user_signed_in? %>
 						Logged in as <strong><%= current_user.email %></strong>.
 						<%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
