Deleted 된 회원들은 벳지를 통해 지워진 회원임을 일단 암시를 하도록 했어요

--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -843,7 +843,6 @@
 
 																		<!--begin::User details-->
 																		<div class="d-flex flex-column" style="margin-left:20px">
-																		<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
 																			<% if user.role == 1 %>
 																				<a href="/users/parent-detail/<%=user.id%>" class="text-gray-800 text-hover-primary mb-1"><%=user.name%> </a>
 																			<% end %>
@@ -854,6 +853,9 @@
 																				<a class="text-gray-800 text-hover-primary mb-1"><%=user.name%> (Admin) </a>
 																			<% end %>
 																			<span class="fs-8"><%=user.email%></span>
+																			<% if user.deleted == true %>
+																				<span class="badge badge-primary badge-danger">Deleted</span>
+																			<% end %>
 																		</div>
 																		<!--begin::User details-->
 																	</td>
@@ -881,7 +883,26 @@
 																	
 																	<!--begin::Action=-->
 																	<td class="text-end">
-																		<a href="#" class="btn btn-sm btn-light btn-active-light-primary" data-bs-toggle="modal" data-bs-target="#modal_school_class">Actions
+																		<a class="btn btn-light btn-active-light-primary btn-sm" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">Actions
+																			<span class="svg-icon svg-icon-5 m-0">
+																				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+																					<path d="M11.4343 12.7344L7.25 8.55005C6.83579 8.13583 6.16421 8.13584 5.75 8.55005C5.33579 8.96426 5.33579 9.63583 5.75 10.05L11.2929 15.5929C11.6834 15.9835 12.3166 15.9835 12.7071 15.5929L18.25 10.05C18.6642 9.63584 18.6642 8.96426 18.25 8.55005C17.8358 8.13584 17.1642 8.13584 16.75 8.55005L12.5657 12.7344C12.2533 13.0468 11.7467 13.0468 11.4343 12.7344Z" fill="black"></path>
+																				</svg>
+																			</span>
+																		</a>
+																		<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
+																			<div class="menu-item px-3">
+																				<% if user.role == 1 %>
+																					<a href="/users/parent-detail/<%=user.id%>" class="menu-link px-3">Edit </a>
+																				<% end %>
+																				<% if user.role == 5 %>
+																					<a href="/users/teacher-detail/<%=user.id%>" class="menu-link px-3">Edit </a>
+																				<% end %>
+																			</div>
+																			<div class="menu-item px-3">
+																				<a href="/users/delete-user/<%=user.id%>" class="menu-link px-3" data-kt-users-table-filter="delete_row">Delete</a>
+																			</div>
+																		</div>
 																	</td>
 																	<!--end::Action=-->
 																</tr>
@@ -1068,7 +1089,6 @@
 														<!--end::Last login=-->
 												
 														<!--begin::Joined-->
-                                                        <%# TODO:: 가입 날짜 -> created_at %>
 														<td data-order="2021-06-20T22:10:00+09:00">20 Jun 2021, 10:10 pm</td>
 														<!--begin::Joined-->
 														<!--begin::Action=-->
