인터뷰 리스트 연결

--- a/app/views/interview/interview_list.html.erb
+++ b/app/views/interview/interview_list.html.erb
@@ -163,6 +163,7 @@
 														<td>
 															<!--begin::User details-->
 															<div class="d-flex flex-column">
+                                                                <%# TODO:: 학생 디테일 링크를 연결 %>
 																<a href="#" class="text-gray-800 text-hover-primary mb-1">Jr. Dan</a>
 																<span>Boy / Grade 6 </span>
 																<span>2011.01 </span>
@@ -175,6 +176,7 @@
 														<td class="d-flex align-items-center">
 															<!--begin::User details-->
 															<div class="d-flex flex-column">
+                                                                <%# TODO:: User 디테일을 연결 %>
 																<a href="#" class="text-gray-800 text-hover-primary mb-1">Dan Wilson</a>
 																<span>dam@consilting.com</span>
 																<span>+82-10-2988-1229</span>
