interview list 올리기

--- a/app/views/interview/interview_list.html.erb
+++ b/app/views/interview/interview_list.html.erb
@@ -177,6 +177,7 @@
 															<!--begin::User details-->
 															<div class="d-flex flex-column">
                                                                 <%# TODO:: User 디테일을 연결 %>
+																<%# admin/users/parent-detail/:id %>
 																<a href="#" class="text-gray-800 text-hover-primary mb-1">Dan Wilson</a>
 																<span>dam@consilting.com</span>
 																<span>+82-10-2988-1229</span>
