--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -76,22 +76,14 @@
 						</span>
 						<div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4 w-lg-225px">
 							<div class="menu-item">
-								<a class="menu-link py-3" href="../../demo4/dist/admin_school_interview.html" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+								<a class="menu-link py-3" href="/admin/school/interview-list" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">Interview</span>
 								</a>
 							</div>
 							<div class="menu-item">
 								<a class="menu-link py-3" href="../../demo4/dist/admin_school_class.html" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">Class
-										<span class="fs-lg-9 badge badge-danger px-2 py-1 ms-2">tier-A</span>
-									</span>
-								</a>
-							</div>
-							<div class="menu-item">
-								<a class="menu-link py-3" href="../../demo4/dist/admin_school_bidding.html" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-									<span class="menu-title">Bidding
-										<span class="fs-9 badge badge-success px-2 py-1  ms-2">tier-B</span>
-
+										<span class="fs-lg-9 badge badge-danger px-2 py-1 ms-2">New</span>
 									</span>
 								</a>
 							</div>
