--- a/app/views/class/class_list.html.erb
+++ b/app/views/class/class_list.html.erb
@@ -19,7 +19,7 @@
 
 							<div class="d-flex flex-wrap flex-stack mb-6">
 								<!--begin::Heading-->
-								<h3 class="fw-bolder my-2 ">Class <span class="ms-2 badge badge-danger">tier-A</span></h3>
+								<h3 class="fw-bolder my-2 ">Class <span class="ms-2 badge badge-danger">New</span></h3>
 								<!--end::Heading-->
 								<!--begin::Actions-->
 								<div class="d-none d-flex flex-wrap my-2">
