book detail 페이지까지 로드는 완료

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -93,7 +93,7 @@
 								</a>
 							</div>
 							<div class="menu-item">
-								<a class="menu-link py-3" href="../../demo4/dist/admin_school_book.html" title="Build your layout, preview and export HTML for server side integration" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+								<a class="menu-link py-3" href="/admin/book/book-list" title="Build your layout, preview and export HTML for server side integration" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">Book</span>
 								</a>
 							</div>
