admin class detail 페이지 연결

--- a/app/views/class/class_list.html.erb
+++ b/app/views/class/class_list.html.erb
@@ -2065,7 +2065,8 @@
 
 															<!--begin::User details-->
 															<div class="d-flex flex-column">
-																<a href="../../demo4/dist/admin_school_class_view.html" class="text-gray-800 text-hover-primary mb-1">5학년 A1 - BH2 북클럽</a>
+															<%# TODO:: 해당 반의 디테일로 ㄴㅁ어갈 링크가 필요로합니다 %>
+																<a href="/admin/class/class-detail/1" class="text-gray-800 text-hover-primary mb-1">5학년 A1 - BH2 북클럽</a>
 																<span class="fs-8">Jun 17, 2022</span>
 															</div>
 															<!--begin::User details-->
