stataic transaction 페이지 작업 완료

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,7 +48,7 @@
 				
 					<% if @user && @user.role ==10%>
 						<div data-kt-menu-trigger="click" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion me-lg-1">
-							<span class="menu-link py-3 active">
+							<span class="menu-link py-3">
 								<span class="menu-title">User</span>
 								<span class="menu-arrow d-lg-none"></span>
 							</span>
@@ -118,7 +118,7 @@
 								</a>
 							</div>
 							<div class="menu-item">
-								<a class="menu-link py-3" href="../../demo4/dist/admin_static_transaction.html" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+								<a class="menu-link py-3" href="/admin/salary/admin-transactions" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">transaction</span>
 								</a>
 							</div>
@@ -751,8 +751,7 @@
 												<!--begin::Symbol-->
 												<div class="symbol symbol-40px me-4">
 													<span class="symbol-label bg-light">
-														<!--SVG file not found: icons/duotune/graphs/gra002.svg
--->
+														<!--SVG file not found: icons/duotune/graphs/gra002.svg-->
 													</span>
 												</div>
 												<!--end::Symbol-->
