Payment 까지 완성. 이로 탭 중에서 User, School, Static 을 완성했습니다

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -113,12 +113,12 @@
 						</span>
 						<div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4 w-lg-225px">
 							<div class="menu-item">
-								<a class="menu-link py-3" href="../../demo4/dist/admin_static_tuition.html" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-									<span class="menu-title">tuition</span>
+								<a class="menu-link py-3" href="/admin/static/admin-payments" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+									<span class="menu-title">payments</span>
 								</a>
 							</div>
 							<div class="menu-item">
-								<a class="menu-link py-3" href="/admin/salary/admin-transactions" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+								<a class="menu-link py-3" href="/admin/static/admin-transactions" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">transaction</span>
 								</a>
 							</div>
