--- a/app/views/salary/admin_transaction.html.erb
+++ b/app/views/salary/admin_transaction.html.erb
@@ -90,10 +90,8 @@
                                                     </thead>
                                                     <tbody class="fw-bold text-gray-600">
                                                         <!--begin::Table row-->
-    
+                                                        <%# TODO:: 이 부분 반복하면 됩니다 %>
                                                         <tr>
-    
-    
                                                             <td class="d-flex align-items-center">
                                                     
                                                                 <div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
@@ -714,7 +712,7 @@
                                             <!--begin::Table body-->
                                             <tbody class="text-gray-600 fw-bold">
                                                 
-                                            
+                                                <%# TODO:: 이 부분 반복하면 됩니다 %>
                                                 <tr class="odd">
                                                     <!--begin::Checkbox-->
                                                     <td>
