review 까지 연결 완료

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -138,7 +138,7 @@
 								</a>
 							</div>
 							<div class="menu-item">
-								<a class="menu-link py-3" href="../../demo4/dist/admin_community_review.html" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+								<a class="menu-link py-3" href="/admin/community/review" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">review</span>
 								</a>
 							</div>
